# hbd

./: .gitignore  COMMANDS.md  CUSTOMIZATION.md  Cargo.toml  LICENSE.md  METRICS.md  README.md  TODO.md  config.ron  justfile  rustfmt.toml
docs/: demo.tape
examples/waybar/: cmd.sh  config.jsonc
src/: cli.rs  error.rs  file.rs  lib.rs  main.rs  shared.rs
src/cmd/: add.rs  get.rs  import.rs  list.rs  mod.rs  read.rs  remove.rs  rename.rs  set.rs
src/files/: config.rs  mod.rs  storage.rs  utils.rs
src/utils/: check_exists.rs  date.rs  fmt.rs  mod.rs
tests/: gen_import.rs  metrics.sh
