[package]
name = "hbd"
version = "0.1.0"
authors = ["tkr-sh"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Remember birthdays easily!"
repository = "https://github.com/tkr-sh/hbd"
documentation = "https://docs.rs/hbd/latest/hbd/index.html"
readme = "README.md"
keywords = ["cli", "birthday", "date"]
categories = ["command-line-utilities"]
exclude = [
    "docs/*",
    "examples/*",
    "packages/*",
    "*.md",
    "*.gif",
    "justfile",
]



[dependencies]
chrono = "0.4.38"
clap = { version = "4", features = ["derive"]}
regex = "1.10.6"
ron = "0.8.1"
serde = { version = "1.0.210", features = ["serde_derive"]}
serde_json = "1.0.128"
tqdm = "0.7.0"

[dev-dependencies]
rand = "0.8.5"
